--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "dependencies": {
     "axios": "^0.27.2",
     "config": "^3.3.7",
-    "cor": "^0.0.0",
+    "cors": "^2.8.5",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "mongodb": "^4.8.0"
