--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   "keywords": [],
   "dependencies": {
     "axios": "^0.27.2",
+    "bootstrap": "^5.2.0",
+    "bootstrap-icons": "^1.9.1",
     "config": "^3.3.7",
     "cors": "^2.8.5",
     "ejs": "^3.1.8",
