--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "bootstrap-icons": "^1.9.1",
     "config": "^3.3.7",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "mongodb": "^4.8.0"
